# azure-project-bootstrap

./: .gitignore  AI-CHAT-DEPLOYMENT-CHECKLIST.md  APIM-POLICY-MANAGEMENT.md  DEPLOY.md  DEPLOYMENT.md  HEALTH-CHECKS.md  REALTIME-CHAT.md  TESTING-AUTH.md  WEBRTC-DEPLOYMENT-READY.md  import-openapi.sh
.devcontainer/: Dockerfile  devcontainer.json  setup-git-hooks.sh
.devcontainer/.hooks/: pre-commit  pre-push
.github/workflows/: cd.yml  deploy-ai-chat-service.yml  deploy-api-service.yml  deploy-core.yml  deploy-ui-service.yml  deploy-webrtc-signaling-service.yml  destroy-core.yml
infra/: CREATE-REAL-CERTIFICATE.md
infra/bootstrap/: .terraform.lock.hcl  README.md  main.tf
infra/core/: .terraform.lock.hcl  APIM-POLICY-DEPLOYMENT.md  APIM-SETUP.md  AZURE-AD-SETUP.md  INFRASTRUCTURE-CHANGES.md  NETWORK-SECURITY-RULES.md  PRIVATE-NETWORKING.md  VPN-CERTIFICATE-AUTH.md  VPN-SETUP.md  ai-services.tf  api-management.tf  apim-policy-full.xml  apim-policy.xml  application-gateway.tf  azure-ad.tf  communication-services.tf  container-apps.tf  container-registry.tf  dns-resolver.tf  front-door.tf  key-vault-access.tf  (+12 more)
services/: README-APIM.md
services/ai-chat/: .env.example  AGENT-FRAMEWORK-SETUP.md  APPLICATION-GATEWAY.md  AZURE-OPENAI-FIX.md  Dockerfile  README.md  REMOVED-API-KEY.md  THREAD-MIGRATION.md  deploy.sh  env.sh  pyproject.toml
services/ai-chat/app/: config.py  main.py
services/ai-chat/app/middleware/: auth.py
services/ai-chat/app/models/: chat.py  user.py
services/ai-chat/app/routers/: chat.py  user.py
services/ai-chat/app/services/: chat.py
(+88 files in other folders)
